Fixed - Bug 358227 - [TextSizeDetermination] Add support for measurement of markup